--- a/todo.txt
+++ b/todo.txt
@@ -23,13 +23,14 @@ User Stories:
 
 Engineering Tasks:
 * change client to not stop drawing when mouse leaves drawing area
-  - Figure out why event handler is being triggered multiple times
-- Deal with duplication in touch event testing (use Modernizr?)
-- What is up with IE 8 failing when Chrome is not running?
 - handle the case where user lets go of mouse button outside drawing area
 - draw a single pixel when mouse is clicked (or screen is tapped)
+- What is up with IE 8 failing when Chrome is not running?
+- Deal with duplication in touch event testing (use Modernizr?)
 
 To Do on current task:
+- Incorporate JQuery off() method call into HtmlElement
+- Fix IE8 and IE9 breakage with mouse-leave test (uncomment)
 - Create HtmlElement.documentBody?
 - Eliminate need for JQuery element on HtmlElement constructor?
 
