--- a/todo.txt
+++ b/todo.txt
@@ -27,7 +27,8 @@ Engineering Tasks:
   - double-check other browsers
 
 To Do on current task:
-* properly test it
+* ensure that setCapture() and releaseCapture() are called
+- make tests work on browsers that don't support setCapture() and releaseCapture()
 - add support for setCapture/releaseCapture in our HtmlElement abstraction
   - get rid of drawingAreaDom hack
 - fix duplication of mouse positioning handling in our window-related client tests
