Generalized setCapture() simulation into HtmlElement abstraction

--- a/todo.txt
+++ b/todo.txt
@@ -27,9 +27,15 @@ Engineering Tasks:
   - double-check other browsers
 
 To Do on current task:
-- generalize setCapture and releaseCapture simulation
+* generalize setCapture and releaseCapture simulation
 - test-drive releaseCapture in client.js
 - put tests around changes to html_element.js
+  - onMouseEventHandlerFn()
+  - setCapture/releaseCapture()
+  - HtmlElement.fromHtml() must send through DomElement for setCapture/releaseCapture to work
+- deal with issue where setCapture() will be redefined multiple times if HtmlElement is constructed
+	on the same object multiple times
+- does relativeX and relativeY work properly when setCapture is used?
 - look for Modernizr/feature-based solution to browser.doesNotSendUserEventsToWindowObject()
 - add support for setCapture/releaseCapture in our HtmlElement abstraction
   - get rid of drawingAreaDom hack
