Organized HtmlElement tests better, started test for weird IE 8 window bug

--- a/todo.txt
+++ b/todo.txt
@@ -33,7 +33,7 @@ Engineering Tasks:
 
 To Do on current task:
 * put tests around changes to html_element.js
-  - onMouseEventHandlerFn()
+  * onMouseEventHandlerFn()
   - HtmlElement.fromHtml() must send through DomElement for setCapture/releaseCapture to work
   - setCapture/releaseCapture()
     - relativeX and relativeY does not work properly when setCapture is used?
