--- a/todo.txt
+++ b/todo.txt
@@ -32,10 +32,9 @@ Engineering Tasks:
 - integrate
 
 To Do on current task:
-* put tests around changes to html_element.js
+- put tests around changes to html_element.js
   - setCapture/releaseCapture()
     - relativeX and relativeY does not work properly when setCapture is used?
-- take a second look at HtmlElement.setCapture() -- is that the right abstraction?
 - test-drive releaseCapture in client.js -- take a second look, does it need more specific tests?
 - look for Modernizr/feature-based solution to browser.doesNotSendUserEventsToWindowObject()
 - fix duplication of mouse positioning handling in our window-related client tests
