--- a/todo.txt
+++ b/todo.txt
@@ -32,10 +32,10 @@ Engineering Tasks:
 - integrate
 
 To Do on current task:
-- AT START OF NEXT EPISODE:
 - improve _html_element_test.js
 - test-drive releaseCapture in client.js -- take a second look, does it need more specific tests?
 - Modify client.js so it isn't vulnerable to releaseCapture() not being called.
+- client.js has an off-by-one error when it tests [600, 300] coordinate
 - look for Modernizr/feature-based solution to browser.doesNotSendUserEventsToWindowObject()
 - fix duplication of mouse positioning handling in our window-related client tests
 - relativeX and relativeY does not work properly when setCapture is used?
