--- a/todo.txt
+++ b/todo.txt
@@ -32,6 +32,9 @@ Engineering Tasks:
 - integrate
 
 To Do on current task:
+- START OF NEXT EPISODE:
+  - Laurent Bourgault-Roy: http://www.letscodejavascript.com/v3/comments/live/151
+  - Rename doEvent methods to triggerEvent
 - test-drive releaseCapture in client.js -- take a second look, does it need more specific tests?
 - Modify client.js so it isn't vulnerable to releaseCapture() not being called.
 - client.js has an off-by-one error when it tests [600, 300] coordinate
