--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,7 @@ Minimum Marketable Features:
 User Stories:
 * draw a single pixel when mouse is clicked
 - draw a single pixel when screen is tapped
+? fix gaps in lines when zoomed in
 - 'clear screen' button
 - non-embarrasing site design
 ? painting tools (such as colors or line width)
@@ -40,6 +41,7 @@ To Do on current task:
 - Check SVG dots in other browsers
 - Should a dot be represented by "lines"?
 - Should we eliminate the relativeOffset duplication in client.js?
+- Modernizr touch detection is broken--tests fail on IE8 depending on number of browsers captured due to 9px detection
 
 
 Notes:
