--- a/todo.txt
+++ b/todo.txt
@@ -34,12 +34,7 @@ Engineering Tasks:
 * modify SvgCanvas to support drawing a single dot (drawLine doesn't work)
 
 To Do on current task:
-* test stroke width & linecaps for SVG
-- test stroke width & linecaps for VML
-- clean up lineSegmentsAndAttributes()
-- Be sure to document the obscure reasons for 2-pixel stroke and linecaps (for dots)
-- Check SVG dots in other browsers
-- Should a dot be represented by "lines"?
+* Test a circle when a line is one-pixel long
 - Should we eliminate the relativeOffset duplication in client.js?
 - Modernizr touch detection is broken--tests fail on IE8 depending on number of browsers captured due to 9px detection
 
