--- a/todo.txt
+++ b/todo.txt
@@ -32,9 +32,14 @@ User Stories:
 Engineering Tasks:
 * Modify HtmlElement.triggerSingleTouchEnd() and .triggerSingleTouchCancel() to generate zero touches.
 - Modify HtmlElement to look for *zero* touches when the touch ends. (Or make some other change.)
+- Clean up HtmlElementTest eventMonitor code and usage
+- Clean up HtmlElement and its overly? complex function-creating functions
 - Modernizr touch detection is broken--tests fail on IE8 depending on number of browsers captured due to 9px detection
 
 To Do on current task:
+* Factor out new event monitoring code
+- Add triggerTouchCancel()
+- Modify existing code to use our new triggerTouchEnd() and triggerTouchCancel()
 
 
 Notes:
