--- a/todo.txt
+++ b/todo.txt
@@ -33,6 +33,7 @@ Engineering Tasks:
 * Clean up HtmlElementTest eventMonitor code and usage
 - Clean up HtmlElement and its overly? complex function-creating functions
 - Modernizr touch detection is broken--tests fail on IE8 depending on number of browsers captured due to 9px detection
+- Integrate
 
 To Do on current task:
 
