--- a/todo.txt
+++ b/todo.txt
@@ -30,12 +30,9 @@ User Stories:
 - quality user-facing site design
 
 Engineering Tasks:
-* Clean up HtmlElement and its overly? complex function-creating functions
-- Modernizr touch detection is broken--tests fail on IE8 depending on number of browsers captured due to 9px detection
-- Integrate
+* Integrate
 
 To Do on current task:
-* Clean up HtmlElement's touch events
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
