--- a/todo.txt
+++ b/todo.txt
@@ -10,8 +10,7 @@ Minimum Marketable Features:
 - more collaborative features?
 
 User Stories to finish current MMF:
-* fix issue: drawing area doesn't quite fit to borders
-- click tracking is a little bit off (because of borders)
+* click tracking is a little bit off (because of borders)
 - eraser tool
 
 Potential future stories:
@@ -24,11 +23,8 @@ Potential future stories:
 - quality user-facing site design
 
 Engineering Tasks:
-* Modify SvgCanvas to use element dimensions rather than having Raphael auto-calculate it
 
 To Do on current task:
-* Write a test for passing through correct coordinates to Raphael
-- Update production code to use HtmlElement.getDimensions()
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
